--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -523,7 +523,7 @@ form.card {
 
 .report-main-body .report-title {
     background-color: #1D4CAE;
-    padding: 10px 20px;
+    padding: 5px 20px 12px 20px;
     color: #ffffff;
     text-align: center;
     font-size: 14px;
