--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,6 +54,26 @@ body {
     position: relative;
 }
 
+.invoice {
+    margin: 0px auto;
+    text-align: left;
+    width: 80%;
+}
+.invoice td {
+    padding: 5px 0;
+}
+.invoice .invoice-items {
+    width: 100%;
+}
+.invoice .invoice-items td {
+    border-top: #eee 1px solid;
+}
+.invoice .invoice-items .total td {
+    border-top: 2px solid #333;
+    border-bottom: 2px solid #333;
+    font-weight: 700;
+}
+
 .card-bg {
     background-color: rgb(0 0 0 / 20%);
 }
